packages/beff-core/tests/snapshots/safe_to_change__tests__fail_param_1.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (c:Ctx, a: "a"|"b")  => {
                    return "world";
                }
            }
        }
        
to:

        export default {
            "/hello": {
                get: (c:Ctx, a: "a") => {
                    return "world";
                }
            }
        }
        

# Error at GET /hello:

Param `a` is not compatible.

```ts
type Old = ("a" | "b");
```

```ts
type New = "a";
```

```ts
type Diff = "b";
```

```ts
type Evidence = ("b");
```

Param `a` might be called with now unsupported value:

evidence:

```js
"b";
```
