packages/beff-core/tests/snapshots/safe_to_change__tests__fail_param_2.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        type A = "a"|"b";
        export default {
            "/hello": {
                get: (c:Ctx, a: A):A => impl()
            }
        }
        
to:

        type A = "a";
        export default {
            "/hello": {
                get: (c:Ctx, a: A):A => impl()
            }
        }
        

# Error at GET /hello:

Param `a` is not compatible.

```ts
type Old = "a" | "b";
```

```ts
type New = "a";
```

Param `a` might be called with now unsupported value:

```json
"b"
```
