packages/beff-core/tests/snapshots/safe_to_change__tests__fail_typeof.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        const valueB = "b" as const;
        type B = typeof valueB;
        
        export default {
            "/hello": {
                get: (): B => impl()
            }
        }
        
to:

        type B = string;
        export default {
            "/hello": {
                get: (): B => impl()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = "b";
```

```ts
type New = string;
```

Old clients will not support this response:

```json
"Izr1mn6edP0HLrWu"
```
