packages/beff-core/tests/snapshots/safe_to_change__tests__print1.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: printed
---
type A = string;
export default {
    "/hello": {
        "get": (): A =>impl(),
        "post": (): (["a1", {
                "a": Array<number>;
            }] | ["a2", {
                "b": Array<boolean>;
            }]) =>impl(),
        "put": (): (["a1", {
                "a": number;
            }] | ["a2", {
                "a"?: string;
            }]) =>impl()
    }
};

